syntax = "proto3";

package msg;

import "gogo.proto";

option(gogoproto.goproto_getters_all) = false;

// ============================================================================
// msgid range for C <-> GS: [14400, 14500)
// ============================================================================

import "c_gs.00.structs.proto";

// ============================================================================

message GWarData {}

message GWarGuildBase {
    string Id     = 1;
    string Name   = 2;
    int32  Icon   = 3;
    int32  Lv     = 4;
    int32  N      = 5;
    int32  ApMean = 6;
    int32  ApMax  = 7;
    int32  SvrId  = 8;
    int32  Jf     = 9;
}

message GWarGuildMember {
    PlayerSimpleInfo Plr  = 1;
    int32            Val  = 2;
    bool             Done = 3;
}

message GWarGuildRankRow {
    string Id    = 1;
    string Name  = 2;
    int32  Icon  = 3;
    int32  Lv    = 4;
    int32  SvrId = 5;
    int32  Jf    = 6;
}

message GWarPlrRankRow {
    PlayerSimpleInfo Plr = 1;
    int32            Cnt = 2;
    int32            Jf  = 3;
}

// ============================================================================

message GS_GWarStageChange { // msgid: 14400
    int32 Stage = 1;
    int64 Ts2   = 2;
}

message GS_GWarNewG2 { // msgid: 14401
}

// ============================================================================

// 获取概要信息
message C_GWarGetSummary { // msgid: 14410
}

message GS_GWarGetSummary_R { // msgid: 14411
    int32         Stage = 1;
    int64         Ts2   = 2;
    GWarGuildBase G2    = 3;
    int32         G1Jf  = 4;
}

// 获取对手公会成员信息
message C_GWarGetG2Members { // msgid: 14412
}

message GS_GWarGetG2Members_R { // msgid: 14413
    int32                    ErrorCode = 1;
    repeated GWarGuildMember Mbs       = 2;
}

// 拉取公会榜
message C_GWarGetGuildRank { // msgid: 14414
}

message GS_GWarGetGuildRank_R { // msgid: 14415
    repeated GWarGuildRankRow Records = 1;
}

// 拉取玩家榜
message C_GWarGetPlrRank { // msgid: 14416
}

message GS_GWarGetPlrRank_R { // msgid: 14417
    int32                   ErrorCode = 1;
    repeated GWarPlrRankRow Records   = 2;
}

// 打架
message C_GWarFight { // msgid: 14418
    string        TarId = 1;
    TeamFormation Team  = 2;
}

message GS_GWarFight_R { // msgid: 14419
    int32        ErrorCode = 1;
    BattleReplay Replay    = 2;
    int32        JfAdd     = 3;
    int32        Val       = 4;
    bool         Done      = 5;
}
